add compal needed codes

--- a/ros/kinetic/kinetic-desktop-full/Dockerfile
+++ b/ros/kinetic/kinetic-desktop-full/Dockerfile
@@ -5,6 +5,13 @@ FROM osrf/ros:kinetic-desktop
 
 # install ros packages
 RUN apt-get update && apt-get install -y \
-    ros-kinetic-desktop-full=1.3.0-0* \
-    && rm -rf /var/lib/apt/lists/*
+    ros-kinetic-desktop-full=1.3.0-0*
+RUN apt-get install ros-kinetic-serial -y
+RUN apt-get install ros-kinetic-bfl -y
+RUN apt-get install ros-kinetic-urg-c -y
+RUN apt-get install ros-kinetic-laser-proc -y
+RUN apt-get install ros-kinetic-move-base-msgs -y
+RUN apt-get install ros-kinetic-ecl -y
+RUN apt-get install libsdl-image1.2-dev -y
+#RUN rm -rf /var/lib/apt/lists/*
 
